Tested and Tweaked the RunCascade Method It is working now but still requires further tweaking.